--- a/d2 kalkulkator/index.html
+++ b/d2 kalkulkator/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="images/d2Icon.png">
     <link rel="stylesheet" href="D2Calc.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8">
@@ -10,7 +11,7 @@
 </head>
 <body>
     <!-- Main Content -->
-    <main id="main">
+    <main id="mainClassesChoice">
         <!-- CLass choice page -->
         <div class="classChoicePageLeft"></div>
         <div class="classChoicePageMid" id="classChoicePage">
@@ -26,7 +27,24 @@
             <img src="images/Selecthero/druidImg.PNG" alt="" id="druidPick">
         </nav>
     </div>
-        <p>Diablo II Resurrected Patch 2.4 Demo</p> 
+        <p>Diablo II Resurrected Calculator Demo</p>
+        <p>Current Patch:</p>
+        <div class="banner-wrapper"><img src="images/patchBanner.jpg" alt="" id="patchImg"></div>
+        <p>About Project:</p>
+        <div class="textMainSite">
+            Diablo 2 Resurrected Calculator has not been completed due to lack of easy data availability <span class="textColor">(There is no API for diablo 2 resurrected at this moment atleast from what I've found out)</span>
+            and because of that, it didn't even make sense to make all features, which without data, won't work, and if I try to gather data myself, it will take ages to complete it.<br><br>
+            Calculator just shows skilltree and skills up to 20 lvl without calculating whole synergies.<br>
+            Everything works nearly the same as in diablo 2.<br>
+            Maybe one day this project will be finished...
+        </div>
+        <p>How to use</p>
+        <div class="textMainSite">
+            Click on desired character image on top of the website, 
+            then set your level and click LMB to add points or RMB to remove points.<br><br>
+            Pay attention to skilltree pathing.<br>
+            Holding ctrl increases adding or removing points by 10.
+        </div>
         </div>
         <div class="classChoicePageRight"></div>
     </main>
